chore: added in global css code to prevent default onclick selection on mobile devices, revert back function change

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+input,
+textarea,
+button,
+select,
+a,
+div,
+image {
+  -webkit-tap-highlight-color: transparent;
+}
